--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/custom.min.css">
 
 </head>
 <body>
 	<header>
-		
+		<nav class="navbar fixed-top navbar-light bg-light">
+		  <a class="navbar-brand" href="#">nav</a>
+
+		  <button class="hamburger hamburger--spin" type="button">
+			  <span class="hamburger-box">
+			    <span class="hamburger-inner"></span>
+			  </span>
+			</button>
+		</nav>	
 	</header>
 
 	<section>
@@ -65,7 +73,9 @@
 
 	<section>
 		<div class="contact">
-			
+			<div class="">
+				
+			</div>
 		</div>
 	</section>
 
@@ -86,7 +96,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script> -->
+		<script type="text/javascript" src="dist/js/all.min.js"></script>
 	</footer>
 </body>
 </html>
