--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-	<link rel="stylesheet" type="text/css" href="dist/css/custom.min.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/custom.css">
 
 </head>
 <body>
 	<header>
 		<nav class="navbar fixed-top navbar-light bg-light">
-		  <a class="navbar-brand" href="#">nav</a>
-
+		  <!-- <a class="navbar-brand" href="#">nav</a> -->
 		  <button class="hamburger hamburger--spin" type="button">
 			  <span class="hamburger-box">
 			    <span class="hamburger-inner"></span>
@@ -30,43 +29,111 @@
 	</header>
 
 	<section>
-		<div class="main">
-			<div class="text-container">
-				<h1>Coming Soon</h1>
+		<div class="container-fluid main">
+			<div class="container h-100">
+				<div class="row h-100 justify-content-center align-items-center">
+					<div class="col-12">
+						<div class="img-circular">
+							<h1>Daragh Cassidy Web Development</h1>
+							<img src="public/images/me.jpg">
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
 
 	<section>
-		<div class="skills">
-			<h2>Skill</h2>
-			<div class="skill">
-				<div class="html">
-					<i class="fab fa-html5"></i>
+		<div class="container-fluid skills">
+			<div class="container h-100">
+				<div class="row justify-content-center align-items-center">
+					<div class="col-md-12">
+						<h2>Skills</h2>
+						<hr>
+					</div>
 				</div>
+				<div class="row h-100 justify-content-center align-items-center">
+					<div class="col">
+						<div class="skill">
+							<div class="styles">
+								<i class="fab fa-html5"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="skill">
+							<div class="styles">
+								<i class="fab fa-css3-alt"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="skill">
+							<div class="js">
+								<i class="fab fa-js"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="skill">
+							<div class="php">
+								<i class="fab fa-php"></i>
+							</div>
+						</div>
+					</div>	
+				</div>		
 			</div>
-			<div class="skill">
-				<div class="styles">
-					<i class="fab fa-css3-alt"></i>
-				</div>
-			</div>
-			<div class="skill">
-				<div class="js">
-					<i class="fab fa-js"></i>
-				</div>
-			</div>
-			<div class="skill">
-				<div class="php">
-					<i class="fab fa-php"></i>
-				</div>
-			</div>
-		</div>	
+		</div>
 	</section>
 
 	<section>
-		<div class="about">
-			<h2>About</h2>
-			<p>Some spiel about me.</p>
+		<div class="container-fluid niche">
+			<div class="container h-100">
+				<div class="row">
+					<div class="col-12">
+						<h2>Page Speed</h2>
+					</div>
+					
+					<div class="col-8">
+						<p>Spiel about page speed ljbnvalfknvlafk lknaflklkad l kafnvlkadflk lkfnvlkanflkanfladlkfnvafl lkfvf</p>
+					</div>
+
+					<div class="col-sm-4">
+						<p>Page speed image here</p>
+					</div>
+				</div>
+				<div class="row">	
+					<div class="col-12">
+						<h2>Responsiveness</h2>
+					</div>
+
+					<div class="col-4">
+						<p>responsive image here</p>
+					</div>
+
+					<div class="col-6">
+						<p>Spiel about building responsive sites</p>
+					</div>
+				</div>
+			</div>	
+		</div>
+	</section>
+
+	<section>
+		<div class="container-fluid about">
+			<div class="container">
+				<div class="row justify-content-md-center">
+					<div class="col-md-12">
+						<h2>About</h2>
+					</div>
+				</div>
+				
+				<div class="row justify-content-md-center">
+					<div class="col-md-12">
+						<p>Some spiel about me.</p>
+					</div>		
+				</div>
+			</div>	
 		</div>
 	</section>
 
