--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Daragh Cassidy Web Development</title>
+	<title>Web Development by Daragh Cassidy</title>
 	<meta charset="utf-8" name="description" content="Bespoke web development by Daragh Cassidy">
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,9 +10,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="referrer" content="always">
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
-
+	<link rel="shortcut icon" href="public/images/favicon-256.png" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/custom.css">
 
@@ -33,6 +32,7 @@
 				<a section-target="about" class="section-link">About</a>
 	      		<!-- <a section-target="skills" class="section-link">Skills</a> -->
 				<a section-target="niche" class="section-link">Optimisation</a>
+				<a section-target="contact" class="section-link">Contact</a>
 		    </div>
 		</nav>	
 	</header>
@@ -162,24 +162,48 @@
 	</section>
 
 	<section>
-		<div class="contact">
+		<div class="contact" id="contact">
 			<div class="container">
+				<div class="row push">
+					<div class="col-12 top">
+						<h2><span>Contact</span></h2>
+					</div>
+					<div class="col-12">
+						<p>Want to get in touch with me? Use the form below to give me a shout!</p>
+					</div>
+				</div>
 				<div class="row">
-					<form action="mail.php" method="POST">
-						<div class="form-group">
-							<label>Name</label>
-							<input type="text" name="name">
+					<div class="col-md-12 text-center">
+						<form class="form"  method="POST" id="contact-form" data-parsley-validate="">
+							<div class="form-group row">
+								<label class="col-form-label col-md-3 col-sm-3 col-xs-12" for="user-name">Name *</label>
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<input type="text" class="form-control" id="user-name" name="name" required="">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label class="col-form-label col-md-3 col-sm-3 col-xs-12" for="user-email">Email *</label>
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<input type="email" class="form-control" name="email" id="user-email" required="">
+								</div>
+							</div>
+							<div class="form-group row">	
+								<label class="col-form-label col-md-3 col-sm-3 col-xs-12" for="user-text-field">Message *</label>
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<textarea name="message" class="form-control" id="user-text-field"data-parsley-trigger="keyup" data-parsley-minlength="20" data-parsley-maxlength="100" data-parsley-minlength-message="Come on! You need to enter at least a 20 character comment.." data-parsley-validation-threshold="10"></textarea>
+								</div>	
+							</div>	
+							<input type="submit" id="form-submit" class="btn submit-form"></input>
+						</form>
+					</div>	
+					<div class="col-md-12">
+						<div class="form-success">
+							<span>Nice, I'll be in touch soon!</span>
 						</div>
-						<div class="form-group">
-							<label>Email</label>
-							<input type="text" name="email">
-						</div>
-						<div class="form-group">	
-							<label>Message</label>
-							<textarea name="message" rows="6" cols="25"></textarea>
+						<div class="form-fail">
+							<span>Not cool, something isn't right!</span>
 						</div>	
-						<input type="submit" value="Send"><input type="reset" value="Clear">
-					</form>
+					</div>
 				</div>
 			</div>
 		</div>
